--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <div class="header"><span class="title">Style Guide</span></div>
-    <div class="navbar_container">
+    <nav class="navbar_container">
       <ul class="navbar">
         <li class="navbar_item" onclick="openPage(event, 'atoms')">Atoms</li>
         <li class="navbar_item" onclick="openPage(event, 'moleules')">Moleules</li>
         <li class="navbar_item" onclick="openPage(event, 'organisms')">Organisms</li>
       </ul>
-    </div>
+    </nav>
     <div id="atoms" class="page">
       <atoms></atoms>
     </div>
