--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
       <organisms></organisms>
     </div>
 
-    <script src="./public/bundle.js"></script>
+    <script src="./public/vendors.bundle.js" defer></script>
+    <script src="./public/bundle.js" defer></script>
     <script type="text/javascript">
     const elements = (className) => {
       return document.getElementsByClassName(className);
